--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.1",
-    "nodemon": "^2.0.20"
+    "mysql2": "^3.6.3",
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.11.0"
   }
 }
