--- a/.example.env
+++ b/.example.env
@@ -1,7 +1,8 @@
+#MONGODB
+
 MONGO_URL=mongodb://localhost:27017/expense
 PORT=5000
 
 # sql
-
-DB_USER=root
-DB_PASSWORD=Keeptrying9@
+DB_USER=
+DB_PASSWORD=
